--- a/.tests/integration/config.yaml
+++ b/.tests/integration/config.yaml
@@ -2,6 +2,8 @@ samples: "samples.tsv"
 
 reference:
   fasta: "reference/WASH7P.fna"
+  dct: "reference/WASH7P.dict"
+  loci: "reference/WASH7P.loci.txt"
 
 vardict:
   bed: "reference/vardict.bed"
@@ -9,4 +11,5 @@ vardict:
 tools:
   common: "docker://marrip/common:1.1.0"
   gatk: "docker://broadinstitute/gatk:4.2.0.0"
+  python: "docker://python:3.10-rc-slim-buster"
   vardict: "docker://marrip/vardict:1.8.2"
