--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           directory: ".tests/integration"
           snakefile: "Snakefile"
-          args: "--lint"
+          args: "--dry-run"
   snakefmt:
     name: Lint Code Base
     runs-on: ubuntu-latest
